buildscript {
    repositories {
        gradlePluginPortal()
        mavenCentral()
    }
    dependencies {
        classpath "com.bmuschko:gradle-docker-plugin:9.3.1"
    }
}

plugins {
    id 'java'
}

group 'edu.vandy.coursera'
version '1.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(19)
    }
}

compileJava {
    options.compilerArgs.add('--enable-preview')
}

repositories {
    mavenCentral()
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation 'org.jetbrains:annotations:23.0.0'
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.assertj:assertj-core:3.24.2'
    testImplementation 'org.mockito:mockito-core:4.11.0'
    testImplementation 'org.apache.commons:commons-text:1.10.0'
    implementation 'com.google.guava:guava:30.1.1-jre'
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'org.apache.commons:commons-text:1.10.0'
}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}

tasks.withType(Test) {
    jvmArgs('-Xmx1024m', '--enable-preview')

    // Ignore test failures
    ignoreFailures = true

    // Configure test logging
    testLogging {
        // Show standard output and error streams
        showStandardStreams = true

        // Show exceptions, stack traces, and causes
        showExceptions = true
        showStackTraces = true
        showCauses = true

        // Set the format for displaying test exceptions
        exceptionFormat = 'full'
    }
}

def tools = "$projectDir/gradle/tools.gradle"
if (file(tools).isFile()) {
    apply from: tools
}